LayoutTests:

Reviewed by Darin.

        1. Test for background image with relative url, when base url element
        is present. .html has a base url, which according to the html spec is supposed
        to be absolute, is actually a relative url. Absolute url would not work with file:// scheme.
        2. Test for base element and @import with relative url.
        http://bugs.webkit.org/show_bug.cgi?id=12214

        * fast/css/background-image-with-baseurl-expected.checksum: Added.
        * fast/css/background-image-with-baseurl-expected.png: Added.
        * fast/css/background-image-with-baseurl-expected.txt: Added.
        * fast/css/background-image-with-baseurl.html: Added.
        * fast/css/import_with_baseurl-expected.checksum: Added.
        * fast/css/import_with_baseurl-expected.png: Added.
        * fast/css/import_with_baseurl-expected.txt: Added.
        * fast/css/import_with_baseurl.html: Added.
        * fast/css/resources/background_image.css: Added.

WebCore:

        Reviewed by Darin.

        Update stylesheet href, when document's baseUrl changes. It needs
        update when the stylesheet is constructed before the parser hits the base tag.
        http://bugs.webkit.org/show_bug.cgi?id=12214

        * css/StyleSheet.h:
        (WebCore::StyleSheet::setHref):
        * dom/Document.cpp:
        (WebCore::Document::setBaseURL):
        * dom/Document.h:



Canonical link: https://commits.webkit.org/16580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19716 268f45cc-cd09-0410-ab3c-d52691b4dbfc