WebCore/css/StyleSheet.h
@@ -49,6 +49,7 @@ public:
     Node* ownerNode() const { return m_parentNode; }
     StyleSheet *parentStyleSheet() const;
     String href() const { return m_strHref; }
+    void setHref(const String& href) { m_strHref = href; }
     String title() const { return m_strTitle; }
     void setTitle(const String& s) { m_strTitle = s; }
     MediaList* media() const { return m_media.get(); }
